[gd_scene load_steps=59 format=2]

[ext_resource path="res://Player/mu sprite animtot1.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=3]
[ext_resource path="res://Particles/white ball.png" type="Texture" id=4]
[ext_resource path="res://Hurtboxes + HitBoxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Particles/star.png" type="Texture" id=6]
[ext_resource path="res://Player/SwordHitbox.gd" type="Script" id=7]
[ext_resource path="res://Hurtboxes + HitBoxes/Hurtbox.tscn" type="PackedScene" id=8]

[sub_resource type="Gradient" id=48]
offsets = PoolRealArray( 0.284768, 1 )
colors = PoolColorArray( 0.561523, 0.561523, 0.561523, 0.713726, 0.74902, 0.74902, 0.74902, 0 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.07285
height = 3.87605

[sub_resource type="Animation" id=2]
resource_name = "Atack__Down"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_anim_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.46196, 2.85082 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Atack_left"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_anim_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.255774, 1.87567 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Atack_right"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_anim_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Atack_up"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 43, 44, 45 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_anim_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.90735e-06, 1.87567 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Boom_down"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "boomerang_anim_finished"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Boom_left"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "boomerang_anim_finished"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Boom_right"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "boomerang_anim_finished"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "Boom_up"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "boomerang_anim_finished"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 33 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=12]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}

[sub_resource type="Animation" id=13]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 46 ]
}

[sub_resource type="Animation" id=14]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 20 ]
}

[sub_resource type="Animation" id=15]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 33 ]
}

[sub_resource type="Animation" id=16]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 7 ]
}

[sub_resource type="Animation" id=17]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 48, 49, 50, 51, 46 ]
}

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Atack__Down"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Atack_right"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "Atack_up"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "Atack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=36]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "Boom_right"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "Boom_left"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "Boom_down"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "Boom_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=43]
blend_point_0/node = SubResource( 41 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 42 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 46 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 47 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Idle_left"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Idle_down"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Idle_right"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Run_left"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Run_Right"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Run_up"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Run_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 23 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 24 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 25 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 26 )
blend_point_3/pos = Vector2( 0, 1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachine" id=30]
states/Attack/node = SubResource( 36 )
states/Attack/position = Vector2( 169, 277 )
states/Boomerang/node = SubResource( 43 )
states/Boomerang/position = Vector2( -33, 146 )
states/Idle/node = SubResource( 22 )
states/Idle/position = Vector2( 169, 146 )
states/Run/node = SubResource( 27 )
states/Run/position = Vector2( 371, 146 )
transitions = [ "Idle", "Run", SubResource( 28 ), "Run", "Idle", SubResource( 29 ), "Idle", "Attack", SubResource( 37 ), "Attack", "Idle", SubResource( 38 ), "Boomerang", "Idle", SubResource( 44 ), "Idle", "Boomerang", SubResource( 45 ) ]
start_node = "Idle"
graph_offset = Vector2( -328, 86 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=31]

[sub_resource type="CapsuleShape2D" id=49]
radius = 9.75307
height = 2.90197

[sub_resource type="Gradient" id=50]
offsets = PoolRealArray( 0.0993377, 1 )
colors = PoolColorArray( 0.992188, 0, 1, 1, 0.992157, 0, 1, 0 )

[sub_resource type="Gradient" id=51]
offsets = PoolRealArray( 0.284768, 1 )
colors = PoolColorArray( 1, 1, 1, 0.713726, 0.74902, 0.74902, 0.74902, 0 )

[sub_resource type="CapsuleShape2D" id=52]
radius = 3.3573
height = 10.465

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -8 )
collision_layer = 2
collision_mask = 129
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.380392 )
position = Vector2( 0, 11.1006 )
texture = ExtResource( 3 )

[node name="trail" type="CPUParticles2D" parent="."]
position = Vector2( 0.438595, 8.84484 )
amount = 5
lifetime = 0.15
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2( 1, 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.05
orbit_velocity_random = 0.77
radial_accel = -0.81
angle = 139.4
angle_random = 1.0
scale_amount = 0.3
color_ramp = SubResource( 48 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 7
hframes = 8
frame = 32
__meta__ = {
"_edit_group_": true
}

[node name="colision" type="CollisionShape2D" parent="."]
position = Vector2( 0.950272, 9.35651 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Atack__Down = SubResource( 2 )
anims/Atack_left = SubResource( 3 )
anims/Atack_right = SubResource( 4 )
anims/Atack_up = SubResource( 5 )
anims/Boom_down = SubResource( 6 )
anims/Boom_left = SubResource( 7 )
anims/Boom_right = SubResource( 8 )
anims/Boom_up = SubResource( 9 )
anims/Idle_down = SubResource( 10 )
anims/Idle_left = SubResource( 11 )
anims/Idle_right = SubResource( 12 )
anims/Idle_up = SubResource( 13 )
anims/Run_Right = SubResource( 14 )
anims/Run_down = SubResource( 15 )
anims/Run_left = SubResource( 16 )
anims/Run_up = SubResource( 17 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 30 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 31 )
parameters/Attack/blend_position = Vector2( 1, 0 )
parameters/Boomerang/blend_position = Vector2( 1, 0 )
parameters/Idle/blend_position = Vector2( 1, 0 )
parameters/Run/blend_position = Vector2( 1, 0 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 1.46196, 2.85082 )
rotation = 1.5708

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource( 5 )]
position = Vector2( 8.89947, -0.689395 )
collision_mask = 16
script = ExtResource( 7 )

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
position = Vector2( 0.890945, 1.78189 )
shape = SubResource( 49 )
disabled = true

[node name="particle_timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="dash_particles" type="Node2D" parent="."]

[node name="sparks" type="CPUParticles2D" parent="dash_particles"]
emitting = false
amount = 50
local_coords = false
texture = ExtResource( 6 )
emission_shape = 1
emission_sphere_radius = 10.63
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 0.1
angular_velocity = 402.58
angular_velocity_random = 1.0
radial_accel = -6.45
angle = 108.4
angle_random = 1.0
scale_amount = 0.8
color_ramp = SubResource( 50 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="trail2" type="CPUParticles2D" parent="dash_particles"]
position = Vector2( 0.438595, 8.84484 )
emitting = false
amount = 10
lifetime = 0.15
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2( 1, 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.05
orbit_velocity_random = 0.77
radial_accel = -0.81
angle = 139.4
angle_random = 1.0
scale_amount = 0.3
color_ramp = SubResource( 51 )

[node name="Hurtbox" parent="." instance=ExtResource( 8 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.761314, 1.91133 )
shape = SubResource( 52 )
[connection signal="timeout" from="particle_timer" to="." method="_on_particle_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="HitboxPivot/SwordHitbox"]

[editable path="Hurtbox"]
